--- a/my_portfolio/portfolio.html
+++ b/my_portfolio/portfolio.html
@@ -625,7 +625,7 @@
                 <div class="security-pulse">
                     <!-- Photo de profil avec overlay cybersécurité -->
                     <div class="profile-photo-container">
-                        <img src="https://page.genspark.site/v1/base64_upload/31150749cd83016ad41393981560d8ae" alt="Mondher Ouled Ahmed" class="profile-photo">
+                        <img src="https://github.com/mondher-oa/mondher-oa.github.io/blob/53acba5167c076c358bf546f494f33cbac26e9fe/my_portfolio/t%C3%A9l%C3%A9chargement%20(2).jpg" alt="Mondher Ouled Ahmed" class="profile-photo">
                         <div class="photo-overlay"></div>
                         <div class="photo-frame-top"></div>
                         <div class="photo-frame-right"></div>
