--- a/my_portfolio/portfolio.html
+++ b/my_portfolio/portfolio.html
@@ -593,7 +593,7 @@
                 <div>
                     <div class="code-font text-accent mb-4">01. <span class="text-white">Bonjour, je suis</span></div>
                     <h1 class="text-4xl sm:text-5xl font-bold mb-4 typewriter">Mondher Ouled Ahmed</h1>
-                    <h2 class="text-2xl sm:text-3xl font-bold text-text-secondary mb-6">Ingénieur en Cybersécurité & Expert SOC/CERT</h2>
+                    <h2 class="text-2xl sm:text-3xl font-bold text-text-secondary mb-6">Ingénieur en Cybersécurité & Consultant en sécurité opérationnelle</h2>
                     
                     <div class="terminal code-font text-sm mb-8">
                         <div class="flex mb-2">
