--- a/my_portfolio/portfolio.html
+++ b/my_portfolio/portfolio.html
@@ -1745,7 +1745,9 @@
             downloadBtns.forEach(btn => {
                 btn.addEventListener('click', function() {
                     // Rediriger vers le CV mis à jour
-                    window.open('https://rssihxmq.genspark.space/', '_blank');
+                    window.open('mondher-oa.github.io/my_portfolio
+/cv_resume_updated_mondher.pdf
+/', '_blank');
                 });
             });
             
