--- a/my_portfolio/portfolio.html
+++ b/my_portfolio/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+cv<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -1745,8 +1745,7 @@
             downloadBtns.forEach(btn => {
                 btn.addEventListener('click', function() {
                     // Rediriger vers le CV mis à jour
-                    window.open('mondher-oa.github.io/my_portfolio
-/cv_resume_updated_mondher.pdf
+                    window.open('https://mondher-oa.github.io/my_portfolio/cv_resume_updated_mondher.pdf
 /', '_blank');
                 });
             });
