Update my resume .html

--- a/my_portfolio/my resume .html
+++ b/my_portfolio/my resume .html
@@ -208,7 +208,7 @@
 
         <!-- Mobile Photo (visible only on small screens) -->
         <div class="flex justify-center mb-6 md:hidden">
-            <img src="https://page.genspark.site/v1/base64_upload/bee5cb3357599a79dd4354edeb8c8e41" alt="Mondher Ouled Ahmed" class="profile-photo">
+            <img src="my_portfolio/téléchargement (2).jpg" alt="Mondher Ouled Ahmed" class="profile-photo">
         </div>
 
         <!-- Professional Summary -->
