--- a/my_portfolio/my resume .html
+++ b/my_portfolio/my resume .html
@@ -169,7 +169,7 @@
         <!-- Header / Contact -->
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6 pb-4 border-b border-gray-200">
             <div class="flex items-center">
-                <img src="https://page.genspark.site/v1/base64_upload/bee5cb3357599a79dd4354edeb8c8e41" alt="Mondher Ouled Ahmed" class="profile-photo mr-4 hidden md:block">
+                <img src="my_portfolio/téléchargement (2).jpg" alt="Mondher Ouled Ahmed" class="profile-photo mr-4 hidden md:block">
                 <div>
                     <h1 class="text-3xl font-bold text-blue-900">Mondher Ouled Ahmed</h1>
                     <h2 class="text-xl font-semibold text-blue-700 mt-1">Cybersecurity Engineer</h2>
