Update my resume .html

--- a/my_portfolio/my resume .html
+++ b/my_portfolio/my resume .html
@@ -169,7 +169,7 @@
         <!-- Header / Contact -->
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6 pb-4 border-b border-gray-200">
             <div class="flex items-center">
-                <img src="my_portfolio/téléchargement (2).jpg" alt="Mondher Ouled Ahmed" class="profile-photo mr-4 hidden md:block">
+                <img src="https://github.com/mondher-oa/mondher-oa.github.io/blob/285076e955f59d2027f69269d20797e0a2fbbbd7/my_portfolio/t%C3%A9l%C3%A9chargement%20(2).jpg" alt="Mondher Ouled Ahmed" class="profile-photo mr-4 hidden md:block">
                 <div>
                     <h1 class="text-3xl font-bold text-blue-900">Mondher Ouled Ahmed</h1>
                     <h2 class="text-xl font-semibold text-blue-700 mt-1">Cybersecurity Engineer</h2>
